TASK-210: Fix layout contents overflowing outside

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html {
 
 body {
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* Scrollbar style */
